Refactor ESLint configuration, update manifest details, and replace logo assets; enhance UI with new icons and localized text

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "HaxFootball Board",
+  "name": "HaxFootball Board",
   "icons": [
     {
       "src": "favicon.ico",
