--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "clsx": "^2.1.1",
     "konva": "^10.0.8",
     "lucide-react": "^0.552.0",
+    "prettier-plugin-classnames": "^0.8.5",
+    "prettier-plugin-merge": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-konva": "^19.2.0",
